# injector_model

./: .gitignore  .gitmodules  Calculate_LHC_intensities.py  Injector_Chain.py  LHC_bunch_intensity.py  README.md  ion_injection_energies.py  ion_parameters.py  pyproject.toml  requirements.txt
Data/: Ion_species.csv  LEIR_final_intensities_Nicolo.csv
Output/: .~lock.4_no_PS_splitting_and_LEIR_PS_stripping.csv#
calculations/: calculate_lhc_intensities.py  calculate_lhc_intensities_with_correct_gammas_and_ps_space_charge_limit.py  calculate_lhc_intensities_with_correct_gammas_and_ps_space_charge_limit_and_higher_LEIR_brho.py  calculate_lhc_intensities_with_ps_space_charge_limit.py  charge_state_and_isotope_scan_comparison.py  vary_isotope.py  vary_leir_charge_state.py
data/: .~lock.ion_injection_energies_PS_SPS_strip.csv#  .~lock.ion_injection_energies_Roderik_baseline_case_PS_SPS_strip.csv#  Full_isotope_data.py  Ion_species.csv  Roderik_2021_LHC_charges_per_bunch_output.xlsx  stable_isotopes.py
examples/: 01_basic_usage.ipynb  02_electron_cooling_effects.ipynb  03_bunch_splitting_scenarios.ipynb  04_stripper_foil_comparison.ipynb  05_advanced_scenarios.ipynb  README.md
injection_energies/: Roderik_injection_energies.py  comparing_with_Roderik_injection_energies.py  ion_injection_energies.py  test_and_print_Pb_injection_energies.py
injector_model/: __init__.py  calculate_lhc_intensities.py  calculate_lhc_intensities_with_correct_gammas_and_ps_space_charge_limit_and_higher_LEIR_brho.py  injection_energies.py  injector_model.py  (+7 more)
injector_model.egg-info/: PKG-INFO
(+156 files in other folders)
