[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "injector_model"
description = "Package to calculate ion performance across the CERN Ion Injector Chain"
version = "0.1.0"
readme = "README.md"
authors = [
    { name = "Elias Waagaard", email = "elias.walter.waagaard@cern.ch" }
]
dependencies = [
    "numpy",
    "matplotlib",
    "pandas",
    "scipy",
]

[tool.setuptools]
py-modules = ['injector_model']
